--- a/backend/api-gateway/package.json
+++ b/backend/api-gateway/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@supabase/supabase-js": "2.39.3",
         "cors": "2.8.5",
+        "dotenv": "^17.2.3",
         "eventemitter3": "5.0.1",
         "express": "4.18.2",
         "helmet": "7.1.0",
