--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
         "@supabase/supabase-js": "^2.89.0",
         "@tanstack/react-query": "^5.90.14",
         "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
         "framer-motion": "^11.0.3",
         "lucide-react": "^0.562.0",
         "react": "18.2.0",
